NXP-13575: better CSS for more menu styling (fixes alignment issue with IE8 with IE7 compatibility mode, for instance)

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
@@ -169,7 +169,7 @@ input.tinyButton {
 
 /* =Actionbar in Home */
 .actionList {
-  float: right;
+  display: inline-block;
   list-style: none;
   margin: 0;
   padding: 0 }
@@ -316,7 +316,10 @@ input.tinyButton {
   max-width: 60% }
 
 .globalActions {
-  text-align: right }
+  float: right }
+
+.globalActions > span, .globalActions .horizontalAction {
+  float: left }
 
 .contextActions {
   padding: .4em 0 .5em }
